--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@nest-middlewares/helmet": "^10.0.0",
     "@nestjs/common": "^10.0.0",
     "@nestjs/core": "^10.0.0",
+    "@nestjs/mapped-types": "*",
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/typeorm": "^10.0.2",
     "cors": "^2.8.5",
