--- a/package.json
+++ b/package.json
@@ -27,8 +27,10 @@
     "@nestjs/mapped-types": "*",
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/typeorm": "^10.0.2",
+    "axios": "^1.6.8",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
+    "googleapis": "^134.0.0",
     "helmet": "^7.1.0",
     "mysql2": "^3.9.3",
     "path": "^0.12.7",
