--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "@nestjs/common": "^10.0.0",
     "@nestjs/core": "^10.0.0",
     "@nestjs/mapped-types": "*",
-    "@nestjs/platform-express": "^10.0.0",
+    "@nestjs/platform-express": "^10.3.8",
     "@nestjs/platform-socket.io": "^10.3.7",
     "@nestjs/typeorm": "^10.0.2",
     "@nestjs/websockets": "^10.3.7",
@@ -37,6 +37,7 @@
     "dotenv": "^16.4.5",
     "googleapis": "^134.0.0",
     "helmet": "^7.1.0",
+    "multer": "^1.4.5-lts.1",
     "mysql2": "^3.9.3",
     "path": "^0.12.7",
     "reflect-metadata": "^0.2.0",
