--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "dependencies": {
     "@google/generative-ai": "^0.5.0",
     "@nest-middlewares/helmet": "^10.0.0",
+    "@nestjs-modules/mailer": "^1.11.2",
     "@nestjs/common": "^10.0.0",
     "@nestjs/core": "^10.0.0",
     "@nestjs/jwt": "^10.2.0",
@@ -42,6 +43,7 @@
     "googleapis": "^134.0.0",
     "helmet": "^7.1.0",
     "mysql2": "^3.9.3",
+    "nodemailer": "^6.9.13",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
     "path": "^0.12.7",
