--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
+    "@azure/storage-blob": "^12.18.0",
     "@google/generative-ai": "^0.5.0",
     "@nest-middlewares/helmet": "^10.0.0",
     "@nestjs-modules/mailer": "^1.11.2",
@@ -34,6 +35,7 @@
     "@nestjs/websockets": "^10.3.7",
     "@types/passport-jwt": "^4.0.1",
     "axios": "^1.6.8",
+    "azure-storage": "^2.10.7",
     "bcrypt": "^5.1.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
@@ -51,7 +53,8 @@
     "rxjs": "^7.8.1",
     "socket-io": "^1.0.0",
     "socket.io": "^4.7.5",
-    "typeorm": "^0.3.20"
+    "typeorm": "^0.3.20",
+    "uuidv4": "^6.2.13"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
@@ -76,7 +79,7 @@
     "ts-loader": "^9.4.3",
     "ts-node": "^10.9.1",
     "tsconfig-paths": "^4.2.0",
-    "typescript": "^5.1.3"
+    "typescript": "^5.4.5"
   },
   "jest": {
     "moduleFileExtensions": [
